# tennislog

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/agents/: build-tester.md  code-patrol.md  code-reviewer.md  feature-implementer.md
api/: .env.example  Makefile  pyproject.toml
api/contexts/: tennis_knowledge.txt
api/prompts/: coaching.toml  diagnosis.toml
api/src/tenniscoach_api/: auth.py  config.py  generator.py  llm_provider.py  main.py  prompt_loader.py  schemas.py
docs/: agent-guide.md  conventions.md  lead-role.md
src/: App.tsx  index.css  types.ts
src/components/: CoachingCard.tsx  InsightCard.tsx  Layout.tsx  PersonPicker.tsx  RecordTypeSheet.tsx  ScoreInput.tsx  SelfRatingPicker.tsx  SessionCard.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useSupabaseSync.ts
src/lib/: api.ts
src/pages/: ActivityDetailPage.tsx  HomePage.tsx  ImportPage.tsx  LoginPage.tsx  OnboardingPage.tsx  PersonDetailPage.tsx  PersonsPage.tsx  RecordBatchPage.tsx  RecordDoublesPage.tsx  RecordPracticePage.tsx  RecordSinglesPage.tsx  SessionDetailPage.tsx  SettingsPage.tsx  StatsPage.tsx  (+1 more)
steering/: design-direction.md  design.md  development-process.md  exe-dev-deploy.md  issues.md  mock-v2.html  mock.html  requirements.md  tasklist.md  wf-friend-register-review-iteration-1.md  wf-friend-register.drawio  wf-friend-timeline-review-iteration-1.md  wf-friend-timeline.drawio  wf-onboarding-review-iteration-1.md  wf-onboarding.drawio  wf-practice-record-review-iteration-1.md  wf-practice-record.drawio  workflows.md
(+11 files in other folders)
